k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: server-service
  namespace: go-hello-world
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30000
