k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
      kubernetes.io/ingress.class: nginx
  namespace: go-hello-world
  labels:
    name: myingress
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: go-server
            port: 
              number: 8080
